classDiagram

%% ENUMS
class TCorrel {
  <<enumeration>>
  Aprobado
  Regular
}

class TAlumn {
  <<enumeration>>
  Ingresante
  Avanzado
}

class TCargo {
  <<enumeration>>
  Jefe_Practico
  Ayudante
}

class TPer {
  <<enumeration>>
  Bimestre
  Trimestre
  Cuatrimestre
  Anual
}

class TCond {
  <<enumeration>>
  Libre
  Regular
  Promocion
}

%% CLASES
class Persona {
  DNI
  Apellido
  Nombre
  Nro_Contacto
  Mail
}

class Docente {
  Nro_Legajo
  Título
}

class Alumno {
  Tipo_Alumno : TAlumn
  + Rendimiento():
}

class Examen_Final {
  Fecha
  Nota
}

class Periodo {
  Fecha_Inicio
  Fecha_Fin
  Cargo : TCargo
  Type_Periodo : TPer
}

class Materia {
  Cod_Materia
  Num_Materia
  Cod_inscripcion
}

class Plan_Estudio {
  Año
  Cod_Plan
}

class Carrera {
  Nombre_Carrera
  Cod_Carrera
}

class Correlatividad {
  Correl : TCorrel
}

class CondicionMateria {
  Tipo_cond : Tcond
}

%% HERENCIA
Persona <|-- Docente
Persona <|-- Alumno

%%RELACIONES DOCENTE MATERIA PERIODO
Docente "1" -- "0..*" Materia : Responsable
Docente "1..*".. Periodo
Periodo .. "1..*"Materia

%%RELACIONES ALUMNO MATERIA EXAMEN FINAL
Alumno "0..*"--"0..*" Materia
Alumno "0..*".. Examen_Final : Rindio
Examen_Final .. "0..*" Materia

%%RELACIONES PLAN DE ESTUDIO
Alumno"1..*" -- "1..*" Plan_Estudio
Materia"1..*" --o "1..*"Plan_Estudio
Plan_Estudio "0..*"--"1" Carrera : Tuvo
Plan_Estudio "0..*"-- "1"Carrera : Vigente

%%RELACIONES DE MATERIA
Materia "0..*"--"0..*" Materia
Materia .. Correlatividad
Correlatividad .. Materia

%% RELACIONES MATERIA ALUMNO COND_EN_MATERIA
Alumno"1..*" -- "1..*" Materia
Alumno .. COND_EN_MATERIA
COND_EN_MATERIA .. Materia
